AG-3355 Prevent header cell background overflowing when padding > width

--- a/packages/ag-grid-community/src/styles/ag-theme-material/sass/ag-theme-material.scss
+++ b/packages/ag-grid-community/src/styles/ag-theme-material/sass/ag-theme-material.scss
@@ -23,6 +23,7 @@
     }
 
     .ag-header-cell, .ag-header-group-cell {
+        background-color: $background-color;
         transition: background-color 0.5s;
     }
 
